src/styles/settings.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

input[type='number'],
input[type='time'] {
  height: 22px;
  line-height: 22px !important;
  vertical-align: middle;
  padding: 0 0 0 10px !important;
  margin-left: 10px !important;
  max-width: 100px;
  border: 1px solid rgb(191, 191, 191);
  border-radius: 2px;
}

input[type='number'] {
  width: 50px;
}

.container {
  position: relative;
  width: 800px;
  max-width: 800px;
  background-color: #fff;
  color: #505050;
}

.tabs {
  display: flex;
  overflow: hidden;
  height: 350px;
  width: 100vw;
  transition: order 300ms ease-in-out;
  align-items: stretch;
  background-color: inherit;
}

.tab {
  display: none;
  flex: 1 0 100vw;
  overflow-y: auto;
  padding: 20px;
  box-sizing: border-box;
}

.tab.active {
  display: block;
}

.list {
  padding: 0;
  margin: 0;
  list-style: none;
}

.list li {
  position: relative;
  min-height: 40px;
}

.list li #nag-nanny:checked ~ div {
  height: auto;
}

.list li #pomodoro-mode:checked ~ div {
  height: 220px;
}

.list li #stop-at-day-end:checked ~ div {
  height: 70px;
}

.list li label {
  font-size: 14px;
  height: 22px;
  line-height: 22px;
  vertical-align: middle;
}

.list li input[type='checkbox'] {
  height: 1.3em;
  width: 1.3em;
  margin: 0px 0.4em 0.3em 0px;
}

.subsettings-details {
  overflow: hidden;
  height: 0px;
  margin-left: 25px;
  transition: height 300ms ease-in-out;
}

.subsettings-details span {
  display: block;
  font-size: 14px;
  padding-top: 10px;
}

.description {
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  border-left: 2px solid #dfdfdf;
  color: rgb(119, 119, 119);
  visibility: hidden;
  padding: 5px;
  width: 40%;
  margin: 0 20px !important;
}

.list li:hover .description {
  visibility: visible;
}

header {
  box-shadow: inset 0px -1px 1px -1px #bbb;
  position: relative;
  z-index: 1;
}

header ul {
  display: flex;
  flex-direction: row;
  list-style: none;
  height: 35px;
  padding: 0;
  margin: 0;
}

header .tab-link {
  box-sizing: border-box;
  background: #fdfdfd;
  border-bottom: 1px solid #eee;
  padding: 10px 20px;
  cursor: pointer;
}

header .active,
header li:hover {
  border-bottom: 1px solid red;
}

/* Permissions tab */

.tab-3 .description {
  width: 40%;
}

.container .tab-3 h2 {
  margin-bottom: 15px;
  clear: both;
}

#origins-container {
  display: inline;
}

.permissions-toolbar {
  width: 375px;
}

#permission-filter {
  width: 210px;
  padding-right: 20px;
}

.button-container {
    display: block;
    margin-top: 10px;
}

.section {
  width: 400px;
}

.section:hover .description {
  visibility: visible;
}

/*
 * For styling permissions and custom permissions lists
*/
.origin-list {
  border: 1px solid #cccaca;
  list-style: none;
  max-height: 290px;
  border-radius: 3px;
  padding: 5px;
  overflow: auto;
  width: 375px;
  font-size: 12px;
}

.origin-list:empty {
  visibility: hidden;
}

.origin-list li {
  height: 23px;
  border-bottom: 1px solid #e8e8e8;
}

.origin-list li:hover {
  background: #f5f5f5;
}

.origin-list li:last-child {
  border-bottom: none;
}

/*
 * Custom permissions list
*/
#custom-permissions-list li {
  line-height: 23px;
  vertical-align: middle;
  padding-left: 5px;
}

/*
 * Permissions list
*/
#permissions-list li {
  display: flex;
  align-items: center;
}


#permissions-list.filtered li {
  display: none;
}

#permissions-list.filtered li.filter {
  display: block;
}

#permissions-list li.disabled {
  opacity: 0.5;
  background-color: #ececec;
}

#permissions-list li.custom {
  outline: 2px solid blue;
}


#permissions-list li div {
  height: 23px;
  line-height: 23px;
  vertical-align: middle;
}

#permissions-list li input {
  margin-right: 10px;
  margin-left: 5px;
}

#filter-clear {
  display: none;
  width: 18px;
  height: 18px;
  line-height: 14px;
  vertical-align: middle;
  text-decoration: none;
  color: #6b6969;
  font-size: 16px;
  font-weight: bold;
  margin-left: -21px;
  position: relative;
  text-align: center;
  margin-top: 3px;
}

#filter-clear:hover {
  color: #ffffff;
  background-color: #6b6969;
  border-radius: 20px;
}

.filtered ~ #filter-clear {
  display: block;
}

#default-project-container {
  display: inline;
}

#default-project {
  margin-left: 5px;
  max-width: 280px;
}

.remove-custom {
  display: block;
  text-align: center;
  text-align: left;
  text-decoration: none;
  color: #ef2d2d;
  font-size: 9px;
  cursor: pointer;
  margin-right: 5px;
  line-height: 12px;
  padding: 5px;
  float: right;
}

.remove-custom:hover {
  color: #ffffff;
  background-color: #ef2d2d;
}

.guide-container {
  display: none;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.guide-back {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background: grey;
  z-index: 999;
  opacity: 0.5;
}

.guide {
  width: 400px;
  background: #ffffff;
  border: 1px solid #d9d9d9;
  border-radius: 5px;
  padding: 15px;
  line-height: 20px;
  z-index: 999;
  box-shadow: 1px 1px 10px #cacaca;
}

.guide > div {
  display: none;
}

/* Pomodoro tab */

#sound-volume {
  width: 80px;
  margin-left: 20px;
  position: relative;
  top: 4px;
}

#volume-label {
  display: inline-block;
  margin-left: 8px;
  height: 16px;
  width: 40px;
  text-align: right;
  margin-right: 5px;
}

#sound-test {
  position: relative;
  right: -112px;
  width: 80px;
}

.pomodoro-sound {
  clear: both;
}

.pomodoro-sound-volume {
  overflow: hidden;
  height: 0px;
  transition: height 300ms ease-in-out;
}

#enable-sound-signal:checked ~ .pomodoro-sound-volume {
  height: 64px;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 42px;
  padding: 0 15px;
  background-color: #f5f5f5;
  border-top: 1px solid #e5e5e5;
  color: #8a8888;
  font-size: 12px;
}

